[gd_scene load_steps=8 format=2]

[ext_resource path="res://Monster/front.png" type="Texture" id=1]
[ext_resource path="res://Monster/Boss.gd" type="Script" id=2]
[ext_resource path="res://Monster/left.png" type="Texture" id=3]
[ext_resource path="res://Monster/back.png" type="Texture" id=4]
[ext_resource path="res://Monster/right.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "move_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "move_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "move_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "move_up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 23, 27.5 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="BossMove" type="AnimatedSprite" parent="."]
position = Vector2( 5, 1.90735e-06 )
scale = Vector2( 0.49, 0.51 )
frames = SubResource( 13 )
animation = "move_left"
playing = true

[node name="ShootTimer" type="Timer" parent="."]

[node name="Rotater" type="Node2D" parent="."]
position = Vector2( 0, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, -1.5 )
shape = SubResource( 14 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
